tests/functional/lang/eval-fail-concatMap-4.err.exp
error:
       … while calling the 'concatMap' builtin
         at /pwd/lang/eval-fail-concatMap-4.nix:1:1:
            1| builtins.concatMap (x: "foo") [
             | ^
            2|   1

       … while evaluating the return value of the function passed to builtins.concatMap
         at /pwd/lang/eval-fail-concatMap-4.nix:1:21:
            1| builtins.concatMap (x: "foo") [
             |                     ^
            2|   1

       error: expected a list but found a string: "foo"
